TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/libtiepieloader.h


extern LibTiePieScpSetEventConnectionTestCompleted_t ScpSetEventConnectionTestCompleted;

extern LibTiePieScpSetEventTriggered_t ScpSetEventTriggered;

extern LibTiePieScpSetEventConnectionTestCompleted_t ScpSetEventConnectionTestCompleted;

extern LibTiePieScpSetEventTriggered_t ScpSetEventTriggered;

extern LibTiePieScpSetMessageDataReady_t ScpSetMessageDataReady;

extern LibTiePieScpSetMessageDataOverflow_t ScpSetMessageDataOverflow;

extern LibTiePieScpSetMessageConnectionTestCompleted_t ScpSetMessageConnectionTestCompleted;

extern LibTiePieScpSetMessageTriggered_t ScpSetMessageTriggered;
extern LibTiePieScpStart_t ScpStart;

extern LibTiePieScpStop_t ScpStop;

extern LibTiePieScpForceTrigger_t ScpForceTrigger;

extern LibTiePieScpGetMeasureModes_t ScpGetMeasureModes;

extern LibTiePieScpGetMeasureMode_t ScpGetMeasureMode;

extern LibTiePieScpSetMeasureMode_t ScpSetMeasureMode;

extern LibTiePieScpIsRunning_t ScpIsRunning;

extern LibTiePieScpIsTriggered_t ScpIsTriggered;

extern LibTiePieScpIsTimeOutTriggered_t ScpIsTimeOutTriggered;

extern LibTiePieScpIsForceTriggered_t ScpIsForceTriggered;

extern LibTiePieScpIsDataReady_t ScpIsDataReady;

extern LibTiePieScpIsDataOverflow_t ScpIsDataOverflow;

extern LibTiePieScpGetAutoResolutionModes_t ScpGetAutoResolutionModes;

extern LibTiePieScpGetAutoResolutionMode_t ScpGetAutoResolutionMode;

extern LibTiePieScpSetAutoResolutionMode_t ScpSetAutoResolutionMode;

extern LibTiePieScpGetResolutions_t ScpGetResolutions;

extern LibTiePieScpGetResolution_t ScpGetResolution;

extern LibTiePieScpSetResolution_t ScpSetResolution;

extern LibTiePieScpIsResolutionEnhanced_t ScpIsResolutionEnhanced;

extern LibTiePieScpIsResolutionEnhancedEx_t ScpIsResolutionEnhancedEx;

extern LibTiePieScpGetClockSources_t ScpGetClockSources;

extern LibTiePieScpGetClockSource_t ScpGetClockSource;

extern LibTiePieScpSetClockSource_t ScpSetClockSource;

extern LibTiePieScpGetClockSourceFrequencies_t ScpGetClockSourceFrequencies;

extern LibTiePieScpGetClockSourceFrequenciesEx_t ScpGetClockSourceFrequenciesEx;

extern LibTiePieScpGetClockSourceFrequency_t ScpGetClockSourceFrequency;

extern LibTiePieScpSetClockSourceFrequency_t ScpSetClockSourceFrequency;

extern LibTiePieScpGetClockOutputs_t ScpGetClockOutputs;

extern LibTiePieScpGetClockOutput_t ScpGetClockOutput;

extern LibTiePieScpSetClockOutput_t ScpSetClockOutput;

extern LibTiePieScpGetClockOutputFrequencies_t ScpGetClockOutputFrequencies;

extern LibTiePieScpGetClockOutputFrequenciesEx_t ScpGetClockOutputFrequenciesEx;

extern LibTiePieScpGetClockOutputFrequency_t ScpGetClockOutputFrequency;

extern LibTiePieScpSetClockOutputFrequency_t ScpSetClockOutputFrequency;

extern LibTiePieScpGetSampleFrequencyMax_t ScpGetSampleFrequencyMax;

extern LibTiePieScpGetSampleFrequency_t ScpGetSampleFrequency;

extern LibTiePieScpSetSampleFrequency_t ScpSetSampleFrequency;

extern LibTiePieScpVerifySampleFrequency_t ScpVerifySampleFrequency;

extern LibTiePieScpVerifySampleFrequencyEx_t ScpVerifySampleFrequencyEx;

extern LibTiePieScpVerifySampleFrequenciesEx_t ScpVerifySampleFrequenciesEx;

extern LibTiePieScpGetRecordLengthMax_t ScpGetRecordLengthMax;

extern LibTiePieScpGetRecordLengthMaxEx_t ScpGetRecordLengthMaxEx;

extern LibTiePieScpGetRecordLength_t ScpGetRecordLength;

extern LibTiePieScpSetRecordLength_t ScpSetRecordLength;

extern LibTiePieScpVerifyRecordLength_t ScpVerifyRecordLength;

extern LibTiePieScpVerifyRecordLengthEx_t ScpVerifyRecordLengthEx;

extern LibTiePieScpGetPreSampleRatio_t ScpGetPreSampleRatio;

extern LibTiePieScpSetPreSampleRatio_t ScpSetPreSampleRatio;

extern LibTiePieScpGetSegmentCountMax_t ScpGetSegmentCountMax;

extern LibTiePieScpGetSegmentCountMaxEx_t ScpGetSegmentCountMaxEx;

extern LibTiePieScpGetSegmentCount_t ScpGetSegmentCount;

extern LibTiePieScpSetSegmentCount_t ScpSetSegmentCount;

extern LibTiePieScpVerifySegmentCount_t ScpVerifySegmentCount;

extern LibTiePieScpVerifySegmentCountEx2_t ScpVerifySegmentCountEx2;

extern LibTiePieScpHasTrigger_t ScpHasTrigger;

extern LibTiePieScpHasTriggerEx_t ScpHasTriggerEx;

extern LibTiePieScpGetTriggerTimeOut_t ScpGetTriggerTimeOut;

extern LibTiePieScpSetTriggerTimeOut_t ScpSetTriggerTimeOut;

extern LibTiePieScpVerifyTriggerTimeOut_t ScpVerifyTriggerTimeOut;

extern LibTiePieScpVerifyTriggerTimeOutEx_t ScpVerifyTriggerTimeOutEx;

extern LibTiePieScpHasTriggerDelay_t ScpHasTriggerDelay;

extern LibTiePieScpHasTriggerDelayEx_t ScpHasTriggerDelayEx;

extern LibTiePieScpGetTriggerDelayMax_t ScpGetTriggerDelayMax;

extern LibTiePieScpGetTriggerDelayMaxEx_t ScpGetTriggerDelayMaxEx;

extern LibTiePieScpGetTriggerDelay_t ScpGetTriggerDelay;

extern LibTiePieScpSetTriggerDelay_t ScpSetTriggerDelay;

extern LibTiePieScpVerifyTriggerDelay_t ScpVerifyTriggerDelay;

extern LibTiePieScpVerifyTriggerDelayEx_t ScpVerifyTriggerDelayEx;

extern LibTiePieScpHasTriggerHoldOff_t ScpHasTriggerHoldOff;

extern LibTiePieScpHasTriggerHoldOffEx_t ScpHasTriggerHoldOffEx;

extern LibTiePieScpGetTriggerHoldOffCountMax_t ScpGetTriggerHoldOffCountMax;

extern LibTiePieScpGetTriggerHoldOffCountMaxEx_t ScpGetTriggerHoldOffCountMaxEx;

extern LibTiePieScpGetTriggerHoldOffCount_t ScpGetTriggerHoldOffCount;

extern LibTiePieScpSetTriggerHoldOffCount_t ScpSetTriggerHoldOffCount;

extern LibTiePieScpHasConnectionTest_t ScpHasConnectionTest;

extern LibTiePieScpChHasConnectionTest_t ScpChHasConnectionTest;

extern LibTiePieScpStartConnectionTest_t ScpStartConnectionTest;

extern LibTiePieScpStartConnectionTestEx_t ScpStartConnectionTestEx;

extern LibTiePieScpIsConnectionTestCompleted_t ScpIsConnectionTestCompleted;

extern LibTiePieScpGetConnectionTestData_t ScpGetConnectionTestData;

extern LibTiePieGenGetConnectorType_t GenGetConnectorType;

extern LibTiePieGenIsDifferential_t GenIsDifferential;

extern LibTiePieGenGetImpedance_t GenGetImpedance;

extern LibTiePieGenGetResolution_t GenGetResolution;

extern LibTiePieGenGetOutputValueMin_t GenGetOutputValueMin;

extern LibTiePieGenGetOutputValueMax_t GenGetOutputValueMax;

extern LibTiePieGenGetOutputValueMinMax_t GenGetOutputValueMinMax;

extern LibTiePieGenIsControllable_t GenIsControllable;

extern LibTiePieGenIsRunning_t GenIsRunning;

extern LibTiePieGenGetStatus_t GenGetStatus;

extern LibTiePieGenGetOutputOn_t GenGetOutputOn;

extern LibTiePieGenSetOutputOn_t GenSetOutputOn;

extern LibTiePieGenHasOutputInvert_t GenHasOutputInvert;

extern LibTiePieGenGetOutputInvert_t GenGetOutputInvert;

extern LibTiePieGenSetOutputInvert_t GenSetOutputInvert;

extern LibTiePieGenStart_t GenStart;

extern LibTiePieGenStop_t GenStop;

extern LibTiePieGenGetSignalTypes_t GenGetSignalTypes;

extern LibTiePieGenGetSignalType_t GenGetSignalType;

extern LibTiePieGenSetSignalType_t GenSetSignalType;

extern LibTiePieGenHasAmplitude_t GenHasAmplitude;

extern LibTiePieGenHasAmplitudeEx_t GenHasAmplitudeEx;

extern LibTiePieGenGetAmplitudeMin_t GenGetAmplitudeMin;

extern LibTiePieGenGetAmplitudeMax_t GenGetAmplitudeMax;

extern LibTiePieGenGetAmplitudeMinMaxEx_t GenGetAmplitudeMinMaxEx;

extern LibTiePieGenGetAmplitude_t GenGetAmplitude;

extern LibTiePieGenSetAmplitude_t GenSetAmplitude;

extern LibTiePieGenVerifyAmplitude_t GenVerifyAmplitude;

extern LibTiePieGenVerifyAmplitudeEx_t GenVerifyAmplitudeEx;

extern LibTiePieGenGetAmplitudeRanges_t GenGetAmplitudeRanges;

extern LibTiePieGenGetAmplitudeRange_t GenGetAmplitudeRange;

extern LibTiePieGenSetAmplitudeRange_t GenSetAmplitudeRange;

extern LibTiePieGenGetAmplitudeAutoRanging_t GenGetAmplitudeAutoRanging;

extern LibTiePieGenSetAmplitudeAutoRanging_t GenSetAmplitudeAutoRanging;