TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas

procedure ScpSetEventConnectionTestCompleted( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; deprecated;
procedure ScpSetEventTriggered( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; deprecated;
procedure ScpSetMessageDataReady( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; deprecated;
procedure ScpSetMessageDataOverflow( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; deprecated;
procedure ScpSetMessageConnectionTestCompleted( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; deprecated;
procedure ScpSetMessageTriggered( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; deprecated;
{$endif MSWINDOWS}
function ScpStart( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpStop( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpForceTrigger( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpGetMeasureModes( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpGetMeasureMode( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpSetMeasureMode( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ) : LongWord; cdecl;
function ScpIsRunning( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpIsTriggered( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpIsTimeOutTriggered( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpIsForceTriggered( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpIsDataReady( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpIsDataOverflow( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpGetAutoResolutionModes( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpGetAutoResolutionMode( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpSetAutoResolutionMode( hDevice : TLibTiePieHandle ; dwAutoResolutionMode : LongWord ) : LongWord; cdecl;
function ScpGetResolutions( hDevice : TLibTiePieHandle ; pList : PByte ; dwLength : LongWord ) : LongWord; cdecl;
function ScpGetResolution( hDevice : TLibTiePieHandle ) : Byte; cdecl;
function ScpSetResolution( hDevice : TLibTiePieHandle ; byResolution : Byte ) : Byte; cdecl;
function ScpIsResolutionEnhanced( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpIsResolutionEnhancedEx( hDevice : TLibTiePieHandle ; byResolution : Byte ) : ByteBool; cdecl;
function ScpGetClockSources( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpGetClockSource( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpSetClockSource( hDevice : TLibTiePieHandle ; dwClockSource : LongWord ) : LongWord; cdecl;
function ScpGetClockSourceFrequencies( hDevice : TLibTiePieHandle ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function ScpGetClockSourceFrequenciesEx( hDevice : TLibTiePieHandle ; dwClockSource : LongWord ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function ScpGetClockSourceFrequency( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpSetClockSourceFrequency( hDevice : TLibTiePieHandle ; dClockSourceFrequency : Double ) : Double; cdecl;
function ScpGetClockOutputs( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpGetClockOutput( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpSetClockOutput( hDevice : TLibTiePieHandle ; dwClockOutput : LongWord ) : LongWord; cdecl;
function ScpGetClockOutputFrequencies( hDevice : TLibTiePieHandle ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function ScpGetClockOutputFrequenciesEx( hDevice : TLibTiePieHandle ; dwClockOutput : LongWord ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function ScpGetClockOutputFrequency( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpSetClockOutputFrequency( hDevice : TLibTiePieHandle ; dClockOutputFrequency : Double ) : Double; cdecl;
function ScpGetSampleFrequencyMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpGetSampleFrequency( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpSetSampleFrequency( hDevice : TLibTiePieHandle ; dSampleFrequency : Double ) : Double; cdecl;
function ScpVerifySampleFrequency( hDevice : TLibTiePieHandle ; dSampleFrequency : Double ) : Double; cdecl;
function ScpVerifySampleFrequencyEx( hDevice : TLibTiePieHandle ; dSampleFrequency : Double ; dwMeasureMode : LongWord ; byResolution : Byte ; pChannelEnabled : PByteBool ; wChannelCount : Word ) : Double; cdecl;
procedure ScpVerifySampleFrequenciesEx( hDevice : TLibTiePieHandle ; pSampleFrequencies : PDouble ; dwSampleFrequencyCount , dwMeasureMode , dwAutoResolutionMode : LongWord ; byResolution : Byte ; pChannelEnabled : PByteBool ; wChannelCount : Word ); cdecl;
function ScpGetRecordLengthMax( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function ScpGetRecordLengthMaxEx( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ; byResolution : Byte ) : UInt64; cdecl;
function ScpGetRecordLength( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function ScpSetRecordLength( hDevice : TLibTiePieHandle ; qwRecordLength : UInt64 ) : UInt64; cdecl;
function ScpVerifyRecordLength( hDevice : TLibTiePieHandle ; qwRecordLength : UInt64 ) : UInt64; cdecl;
function ScpVerifyRecordLengthEx( hDevice : TLibTiePieHandle ; qwRecordLength : UInt64 ; dwMeasureMode : LongWord ; byResolution : Byte ; pChannelEnabled : PByteBool ; wChannelCount : Word ) : UInt64; cdecl;
function ScpGetPreSampleRatio( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpSetPreSampleRatio( hDevice : TLibTiePieHandle ; dPreSampleRatio : Double ) : Double; cdecl;
function ScpGetSegmentCountMax( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpGetSegmentCountMaxEx( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ) : LongWord; cdecl;
function ScpGetSegmentCount( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function ScpSetSegmentCount( hDevice : TLibTiePieHandle ; dwSegmentCount : LongWord ) : LongWord; cdecl;
function ScpVerifySegmentCount( hDevice : TLibTiePieHandle ; dwSegmentCount : LongWord ) : LongWord; cdecl;
function ScpVerifySegmentCountEx2( hDevice : TLibTiePieHandle ; dwSegmentCount , dwMeasureMode : LongWord ; qwRecordLength : UInt64 ; pChannelEnabled : PByteBool ; wChannelCount : Word ) : LongWord; cdecl;
function ScpHasTrigger( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpHasTriggerEx( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ) : ByteBool; cdecl;
function ScpGetTriggerTimeOut( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpSetTriggerTimeOut( hDevice : TLibTiePieHandle ; dTimeOut : Double ) : Double; cdecl;
function ScpVerifyTriggerTimeOut( hDevice : TLibTiePieHandle ; dTimeOut : Double ) : Double; cdecl;
function ScpVerifyTriggerTimeOutEx( hDevice : TLibTiePieHandle ; dTimeOut : Double ; dwMeasureMode : LongWord ; dSampleFrequency : Double ) : Double; cdecl;
function ScpHasTriggerDelay( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpHasTriggerDelayEx( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ) : ByteBool; cdecl;
function ScpGetTriggerDelayMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpGetTriggerDelayMaxEx( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ; dSampleFrequency : Double ) : Double; cdecl;
function ScpGetTriggerDelay( hDevice : TLibTiePieHandle ) : Double; cdecl;
function ScpSetTriggerDelay( hDevice : TLibTiePieHandle ; dDelay : Double ) : Double; cdecl;
function ScpVerifyTriggerDelay( hDevice : TLibTiePieHandle ; dDelay : Double ) : Double; cdecl;
function ScpVerifyTriggerDelayEx( hDevice : TLibTiePieHandle ; dDelay : Double ; dwMeasureMode : LongWord ; dSampleFrequency : Double ) : Double; cdecl;
function ScpHasTriggerHoldOff( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpHasTriggerHoldOffEx( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ) : ByteBool; cdecl;
function ScpGetTriggerHoldOffCountMax( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function ScpGetTriggerHoldOffCountMaxEx( hDevice : TLibTiePieHandle ; dwMeasureMode : LongWord ) : UInt64; cdecl;
function ScpGetTriggerHoldOffCount( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function ScpSetTriggerHoldOffCount( hDevice : TLibTiePieHandle ; qwTriggerHoldOffCount : UInt64 ) : UInt64; cdecl;
function ScpHasConnectionTest( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpChHasConnectionTest( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpStartConnectionTest( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpStartConnectionTestEx( hDevice : TLibTiePieHandle ; pChannelEnabled : PByteBool ; wChannelCount : Word ) : ByteBool; cdecl;
function ScpIsConnectionTestCompleted( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpGetConnectionTestData( hDevice : TLibTiePieHandle ; pBuffer : PLibTiePieTriState ; wChannelCount : Word ) : Word; cdecl;
function GenGetConnectorType( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function GenIsDifferential( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenGetImpedance( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetResolution( hDevice : TLibTiePieHandle ) : Byte; cdecl;
function GenGetOutputValueMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetOutputValueMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetOutputValueMinMax( hDevice : TLibTiePieHandle ; pMin , pMax : PDouble ); cdecl;
function GenIsControllable( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenIsRunning( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenGetStatus( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function GenGetOutputOn( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenSetOutputOn( hDevice : TLibTiePieHandle ; bOutputOn : ByteBool ) : ByteBool; cdecl;
function GenHasOutputInvert( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenGetOutputInvert( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenSetOutputInvert( hDevice : TLibTiePieHandle ; bInvert : ByteBool ) : ByteBool; cdecl;
function GenStart( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenStop( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenGetSignalTypes( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function GenGetSignalType( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function GenSetSignalType( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : LongWord; cdecl;
function GenHasAmplitude( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasAmplitudeEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetAmplitudeMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetAmplitudeMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetAmplitudeMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; pMin , pMax : PDouble ); cdecl;
function GenGetAmplitude( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetAmplitude( hDevice : TLibTiePieHandle ; dAmplitude : Double ) : Double; cdecl;
function GenVerifyAmplitude( hDevice : TLibTiePieHandle ; dAmplitude : Double ) : Double; cdecl;
function GenVerifyAmplitudeEx( hDevice : TLibTiePieHandle ; dAmplitude : Double ; dwSignalType , dwAmplitudeRangeIndex : LongWord ; dOffset : Double ) : Double; cdecl;
function GenGetAmplitudeRanges( hDevice : TLibTiePieHandle ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function GenGetAmplitudeRange( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetAmplitudeRange( hDevice : TLibTiePieHandle ; dRange : Double ) : Double; cdecl;
function GenGetAmplitudeAutoRanging( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenSetAmplitudeAutoRanging( hDevice : TLibTiePieHandle ; bEnable : ByteBool ) : ByteBool; cdecl;
